# Hozon

./: .gitignore  Cargo.toml  README.md  Refactor.md
.github/workflows/: realase-and-doc.yml
examples/: long_path_handling.rs
src/: collector.rs  error.rs  hozon.rs  lib.rs  path_utils.rs  types.rs
src/generator/: cbz.rs  epub.rs  mod.rs
templates/: ComicInfo.xml  Epub.css  Epub.xhtml
tests/: README.md  common.rs  integration.rs  path_handling_test.rs  unit.rs  volume_separator_test.rs
